# f.r.i.d.a.y

./: .env.example  README.md  agent_friday.py  pyproject.toml  server.py
friday/memory/: __init__.py  builtin.py  cache.py  config.py  extractor.py  manager.py  models.py  policy.py  provider.py  ranker.py  registry.py  retriever.py  storage.py  writer.py
friday/plugins/memory/mem0/: __init__.py  provider.py
tests/: test_memory.py
